Initialize GpuDataManagerImpl after GpuDataManagerVisualProxy

Transparent visuals became broken in software rendering mode after
[1], which caused GpuDataManagerVisualProxy to stop getting the
initial OnGpuInfoUpdate() from GpuDataManagerImpl.  This CL moves the
initialization of GDMI after GDMVP so this cannot happen.

[1] https://codereview.chromium.org/2805933002

R=piman@chromium.org
BUG=724297

Review-Url: https://codereview.chromium.org/2892093002
Cr-Commit-Position: refs/heads/master@{#473021}

Former-commit-id: 53f95703f2ce29b492ad6491b637a46d2c2c0ef2